--- a/ProyectoEventos/Views/Evento/Create.cshtml
+++ b/ProyectoEventos/Views/Evento/Create.cshtml
@@ -42,10 +42,10 @@
                 <select asp-for="Estado" class="form-control"></select>
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="UsuarioId" class="control-label"></label>
                 <select asp-for="UsuarioId" class ="form-control" asp-items="ViewBag.UsuarioId"></select>
-            </div>
+            </div> *@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
