Crear, editar y detalle de evento.

--- a/ProyectoEventos/Views/Evento/Details.cshtml
+++ b/ProyectoEventos/Views/Evento/Details.cshtml
@@ -1,41 +1,41 @@
 ﻿@model ProyectoEventos.Models.Evento
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalles";
 }
 
-<h1>Details</h1>
+<h1>Detalles</h1>
 
 <div>
     <h4>Evento</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Titulo)
+            Título
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Titulo)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descripcion)
+            Descripción
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Descripcion)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaHora)
+            Fecha y Hora
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaHora)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Ubicacion)
+            Ubicación
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Ubicacion)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LinkCompra)
+            Link de compra
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LinkCompra)
@@ -46,15 +46,27 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Estado)
         </dd>
-        <dt class = "col-sm-2">
+            @if (!string.IsNullOrEmpty(Model.ImagenUrl))
+            {
+            <dt class="col-sm-2">
+                Imagen
+            </dt>
+            <dd class="col-sm-10">
+                <img src="/@Url.Content(Model.ImagenUrl)"
+                     alt="Imagen del evento"
+                     class="img-fluid rounded"
+                     style="max-height: 300px;" />
+            </dd>
+            }
+        @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Usuario)
-        </dt>
-        <dd class = "col-sm-10">
+        </dt> *@
+        @* <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Usuario.Id)
-        </dd>
+        </dd> *@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
+    <a asp-action="Index">Volver a la lista</a>
 </div>
