--- a/ProyectoEventos/Views/Evento/Index.cshtml
+++ b/ProyectoEventos/Views/Evento/Index.cshtml
@@ -1,71 +1,60 @@
 ﻿@model IEnumerable<ProyectoEventos.Models.Evento>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Mis Eventos";
 }
 
-<h1>Index</h1>
+<h1>Mis Eventos</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear Nuevo</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Titulo)
+                Imagen
+            </th>
+            <th>
+                Evento
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Descripcion)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaHora)
-            </th>
+            
             <th>
                 @Html.DisplayNameFor(model => model.Ubicacion)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LinkCompra)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Estado)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Usuario)
-            </th>
-            <th></th>
+            <th>Acciones</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+                @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Titulo)
+                    <img src="@item.ImagenUrl" style="height:50px" />
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Descripcion)
+                        @Html.DisplayFor(modelItem => item.Titulo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.FechaHora)
+                        @Html.DisplayFor(modelItem => item.Descripcion)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Ubicacion)
+                        @Html.DisplayFor(modelItem => item.Ubicacion)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.LinkCompra)
+                        @Html.DisplayFor(modelItem => item.Estado)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Estado)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Usuario.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Detalles</a> |
+                @* <a asp-action="Delete" asp-route-id="@item.Id">Eliminar</a> *@
             </td>
         </tr>
-}
+                }
     </tbody>
 </table>
